fix: prevent sub nav overflow

--- a/grid-demo/src/styles.scss
+++ b/grid-demo/src/styles.scss
@@ -1,3 +1,11 @@
+nav {
+  height: auto !important;
+  ul {
+    height: auto !important;
+    flex-wrap: wrap;
+  }
+}
+
 clr-accordion-content p:last-child {
   margin-bottom: 1.2rem;
 }
